Scroll the codemirror container

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         <div class="column is-four-fifths">
             <div class="is-flex is-flex-direction-column" style="height: 100%;">
                 <div id="codemirror-container" class="is-flex-grow-1"></div>
-                <div class="is-flex-shrink-1 level">
+                <div class="is-flex-shrink-1 level mt-1">
                     <div class="level-left">
                         <div class="select is-primary level-item">
                             <select title="Choose a language" id="select-choose-language">
